# nginx_config_reloader

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  _build_local.sh  build.sh  mark-release.sh  pyproject.toml  requirements.txt  runtests.sh  setup.py  tox.ini
.github/workflows/: linter.yaml  test.yaml
debian/: changelog  control  install  nginx-config-reloader.init  nginx-config-reloader.maintscript  nginx-config-reloader.service  nginx-config-reloader.upstart  rules
debian/usr/share/dbus-1/system.d/: nginx-config-reloader-bus.conf
nginx_config_reloader/: __init__.py  copy_files.py  nats.py  nats_client.py  settings.py  utils.py
nginx_config_reloader/dbus/: common.py  server.py
tests/: helpers.py  test_after_loop.py  test_apply_chmod.py  test_as_unprivileged_user.py  test_assert_forbidden_statements_in_config.py  test_assert_no_includes_in_config.py  test_dbus_event_loop.py  test_directory_is_unmounted.py  test_fix_custom_config_dir_permissions.py  test_get_logger.py  test_get_pid.py  test_inotify_callbacks.py  test_integration.py  test_main.py  test_nginx_config_reloader.py  test_parse_nginx_config_reloader_arguments.py  test_reload_nginx.py  test_symlink_rearm_integration.py  test_symlink_targets.py  test_wait_loop.py  test_watchdog_callbacks.py  testcase.py
